2A/05_Projet_GL/src/test/deca/syntax/valid/HelloWorld/18_printx_pls_elems.deca
// Description:
//    Programme printx plusieurs elements
// Resultats:
//     Bonjour hello 
//
// Historique:
//    cree le 20/12/2023


{
    printx("Bonjour ", "hello ");
}