2A/05_Projet_GL/src/test/deca/syntax/invalid/HelloWorld/09_chaine_avec_un_nombre_impaire_de_back_slash.deca
// Description:
//    Programme avec un nombre de \ impaire  
//
// Resultats:
//    Erreur lexicale :10:10: token recognition error at: '"Hello \\\");\n}', il reste un \ non protégé
//
// Historique:
//    cree le 20/12/2023
{
    print("Hello \\\");
}